# monostat

./: .gitignore  Dockerfile  README.md  SECURITY.md  TODO.md  manage.py  pyproject.toml  requirements.txt  slack-app.json
.github/workflows/: build.yml
assets/: flow.puml
docker/: monostat.bash  nginx.conf
docker/supervisord/: web.conf  worker.conf
monostat/: __main__.py  asgi.py  settings.py  urls.py  wsgi.py
monostat/core/: admin.py  apps.py
monostat/core/migrations/: 0001_initial.py  0002_alter_incident_options_alter_incidentupdate_options_and_more.py  0003_incident_last_notified_status.py  0004_incident_silent.py
monostat/core/models/: __init__.py  config.py  incident.py
monostat/core/templates/multifactor/: add.html
monostat/core/utils/: admin.py  forms.py  log.py
monostat/notifications/: admin.py  apps.py  models.py  tasks.py
monostat/notifications/migrations/: 0001_initial.py  0002_notificationconfiguration_allow_subscriptions.py  0003_subscriber_created.py
monostat/opsgenie/: admin.py  apps.py  models.py  urls.py  views.py
monostat/opsgenie/migrations/: 0001_initial.py
monostat/public/: apps.py  context.py  feeds.py  urls.py  views.py
monostat/public/templatetags/: rich_text.py
monostat/slack/: admin.py  apps.py  blocks.py  incoming.py  models.py  outgoing.py  slack_app.py  urls.py
monostat/slack/migrations/: 0001_initial.py  0002_alter_slackconfiguration_channel_id.py
monostat/static/luxon/: luxon.js
monostat/static/public/: fonts.css  fork-awesome.css  main.css  main.js  reboot.css
(+22 files in other folders)
