[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "monostat"
version = "0.0.0"
requires-python = ">=3.9"
authors = [
  {name = "pretix team", email = "support@pretix.eu"},
]
maintainers = [
  {name = "pretix team", email = "support@pretix.eu"},
]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Other Audience",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Environment :: Web Environment",
]

dependencies = [
  "Django==5.0.*",
  "django-solo==2.1.*",
  "black==23.12.*",
  "markdown==3.5.*",
  "bleach==6.1.*",
  "django-compressor==4.*",
  "django-csp==3.7",
  "slack_bolt==1.18.*",
  "huey==2.5.*",
  "redis==5.0.*",
  "css-inline==0.13.*",
]

[tool.setuptools.packages.find]
include = ["monostat*"]